--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,102 @@
     transform: rotate(360deg);
   }
 }
+
+.work__box {
+  display: flex;
+  align-items: center;
+}
+
+@media(max-width: 900px) {
+  .work__box {
+      align-items: initial;
+      flex-direction: column-reverse;
+  }
+}
+
+.work__box:not(:last-child) {
+  margin-bottom: 25rem;
+}
+
+@media(max-width: 500px) {
+  .work__box:not(:last-child) {
+      margin-bottom: 20rem;
+  }
+}
+
+.work__links {
+  display: flex;
+  align-items: center;
+}
+
+.work__text {
+  flex: 0 0 30%;
+}
+
+.work__list {
+  /* list-style-type: square; */
+  list-style-position: inside;
+  margin-bottom: var(--gutter-normal);
+}
+
+.work__code {
+  display: block;
+  height: 3rem;
+  margin-left: var(--gutter-normal);
+  transition: all .3s;
+}
+
+.work__code:hover {
+  transform: scale(1.2);
+}
+
+.work__image-box {
+  margin-bottom: var(--gutter-normal);
+}
+
+@media(min-width: 901px) {
+  .work__image-box {
+      flex: 1;
+      margin: 0 0 0 10rem;
+  }
+}
+
+@media(max-width: 900px) {
+  .work__code {
+      height: 4rem;
+  }
+}
+
+
+img {
+  object-fit: contain;
+  max-width: 100%;
+}
+
+.about__content {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+
+@media(max-width: 900px) {
+  .about__content {
+      flex-direction: column-reverse;
+      align-items: initial;
+  }
+}
+
+.about__photo-container {
+  margin-bottom: var(--gutter-normal);
+}
+
+@media(min-width: 901px) {
+  .about__text {
+      flex: 0 0 35%;
+  }
+  
+  .about__photo-container {
+      flex: 1;
+      margin: 0 var(--gutter-huge) 0 0;
+  }
+}
